tests/expectations/compiler/libraries/lib_interface_dynamic_call.out
program impl_cross.aleo;

function fetch:
    output 42u32 as u32.private;

function store:
    input r0 as u32.private;
    add r0 1u32 into r1;
    output r1 as u32.private;

constructor:
    assert.eq edition 0u16;
// --- Next Program --- //
import impl_cross.aleo;
program caller_cross.aleo;

function call_store:
    input r0 as field.private;
    input r1 as u32.private;
    call.dynamic r0 'aleo' 'store' with r1 (as u32.private) into r2 (as u32.private);
    output r2 as u32.private;

function call_fetch:
    input r0 as field.private;
    call.dynamic r0 'aleo' 'fetch' into r1 (as u32.private);
    output r1 as u32.private;

constructor:
    assert.eq edition 0u16;


---
Note: Treating dependencies as Aleo produces different results:

Error [ECHI03712000]: Interface `ext_lib/base_lib::Base` not found.
    --> compiler-test:1:1
     |
   1 | interface Extended : base_lib::Base {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   2 |     fn store(v: u32) -> u32;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^
   3 | }
     | ^
     |
     = Make sure the interface is defined in the current program or an imported program.
Error [ECHI03712000]: Interface `ext_lib/base_lib::Base` not found.
    --> compiler-test:1:1
     |
   1 | interface Extended : base_lib::Base {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   2 |     fn store(v: u32) -> u32;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^
   3 | }
     | ^
     |
     = Make sure the interface is defined in the current program or an imported program.
